--- a/program_bfs-dfs.ipynb
+++ b/program_bfs-dfs.ipynb
@@ -271,6 +271,154 @@
     "# words = [\"hot\", \"dot\", \"dog\", \"lot\", \"log\"]\n",
     "solution(begin, target, words)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "아이템 줍기  \n",
+    "  \n",
+    "다음과 같은 다각형 모양 지형에서 캐릭터가 아이템을 줍기 위해 이동하려 합니다.  \n",
+    "  \n",
+    "(여러개의 직사각형이 겹쳐있음, 단 한 직사각형 안에 다른 직사각형이 완전이 포함되거나 겹쳐진 그룹이 2개 이상인것은 없음)  \n",
+    "  \n",
+    "지형은 각 변이 x축, y축과 평행한 직사각형이 겹쳐진 형태로 표현하며, 캐릭터는 이 다각형의 둘레(굵은 선)를 따라서 이동합니다.  \n",
+    "  \n",
+    "만약 직사각형을 겹친 후 다음과 같이 중앙에 빈 공간이 생기는 경우, 다각형의 가장 바깥쪽 테두리가 캐릭터의 이동 경로가 됩니다.  \n",
+    "  \n",
+    "단, 서로 다른 두 직사각형의 x축 좌표 또는 y축 좌표가 같은 경우는 없습니다.  \n",
+    "  \n",
+    "서로 다른 두 직사각형이 꼭짓점에서 만나거나, 변이 겹치는 경우 등은 없습니다.  \n",
+    "  \n",
+    "다음 그림과 같이 지형이 2개 이상으로 분리된 경우도 없습니다.  \n",
+    "  \n",
+    "한 직사각형이 다른 직사각형 안에 완전히 포함되는 경우 또한 없습니다.  \n",
+    "  \n",
+    "지형을 나타내는 직사각형이 담긴 2차원 배열 rectangle, 초기 캐릭터의 위치 characterX, characterY, 아이템의 위치 itemX, itemY가 solution 함수의 매개변수로 주어질 때, 캐릭터가 아이템을 줍기 위해 이동해야 하는 가장 짧은 거리를 return  \n",
+    "  \n",
+    "제한사항  \n",
+    "rectangle의 세로(행) 길이는 1 이상 4 이하입니다.  \n",
+    "rectangle의 원소는 각 직사각형의 [좌측 하단 x, 좌측 하단 y, 우측 상단 x, 우측 상단 y] 좌표 형태입니다.  \n",
+    "직사각형을 나타내는 모든 좌표값은 1 이상 50 이하인 자연수입니다.  \n",
+    "서로 다른 두 직사각형의 x축 좌표, 혹은 y축 좌표가 같은 경우는 없습니다.  \n",
+    "문제에 주어진 조건에 맞는 직사각형만 입력으로 주어집니다.  \n",
+    "charcterX, charcterY는 1 이상 50 이하인 자연수입니다.  \n",
+    "지형을 나타내는 다각형 테두리 위의 한 점이 주어집니다.  \n",
+    "itemX, itemY는 1 이상 50 이하인 자연수입니다.  \n",
+    "지형을 나타내는 다각형 테두리 위의 한 점이 주어집니다.  \n",
+    "캐릭터와 아이템의 처음 위치가 같은 경우는 없습니다.  \n",
+    "전체 배점의 50%는 직사각형이 1개인 경우입니다.  \n",
+    "전체 배점의 25%는 직사각형이 2개인 경우입니다.  \n",
+    "전체 배점의 25%는 직사각형이 3개 또는 4개인 경우입니다.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 크기를 2배로 늘리면 중앙에 생기는 공간에 대해서도 생각할 필요가 없다.\n",
+    "def solution(rectangle, characterX, characterY, itemX, itemY):\n",
+    "    rectangle = [ list(map(lambda x: x*2, rect)) for rect in rectangle]\n",
+    "    characterX *= 2\n",
+    "    characterY *= 2\n",
+    "    itemX *= 2\n",
+    "    itemY *= 2\n",
+    "    coordinate_set = set()\n",
+    "    direction = {'l': (-1,0), 'r': (1,0), 'b': (0,-1), 't': (0,1)}\n",
+    "\n",
+    "    temp = set()\n",
+    "    for i in range(len(rectangle)):\n",
+    "        rect = rectangle[i]\n",
+    "        x0, y0, x1, y1 = rect\n",
+    "\n",
+    "        # 제거\n",
+    "        for ele in list(coordinate_set):\n",
+    "            if x0 <= ele[0] <= x1 and y0 <= ele[1] <=y1:\n",
+    "                coordinate_set.remove(ele)\n",
+    "\n",
+    "        # 좌측하단 -> 우측\n",
+    "        # 우측상단 -> 좌측\n",
+    "        # 꼭지점\n",
+    "        for j in range(x1-x0+1):\n",
+    "            temp.add((x0 + j, y0))\n",
+    "            temp.add((x1 - j, y1))\n",
+    "            \n",
+    "\n",
+    "        # 좌측하단 -> 상단\n",
+    "        # 우측상단 -> 하단\n",
+    "        for j in range(1, y1-y0+1):\n",
+    "            temp.add((x0, y0 + j))\n",
+    "            temp.add((x1, y1 - j))\n",
+    "            \n",
+    "\n",
+    "        # 제거\n",
+    "        if i:\n",
+    "            for k in range(i):\n",
+    "                prev_rect = rectangle[k]\n",
+    "                p_x0, p_y0, p_x1, p_y1 = prev_rect\n",
+    "                for ele in list(temp):\n",
+    "                    if p_x0< ele[0] < p_x1 and p_y0 < ele[1] < p_y1:\n",
+    "                        temp.remove(ele)\n",
+    "\n",
+    "        coordinate_set.update(temp)\n",
+    "        temp = set()\n",
+    "\n",
+    "    queue = [[characterX, characterY, 0]]\n",
+    "    visited = set()\n",
+    "    visited.add((characterX, characterY))\n",
+    "\n",
+    "    while queue:\n",
+    "        curX, curY, curM = queue.pop(0)\n",
+    "        if (curX, curY) == (itemX, itemY):\n",
+    "            return curM // 2\n",
+    "\n",
+    "        for v in direction.values():\n",
+    "            nxtX = curX + v[0]\n",
+    "            nxtY = curY + v[1]\n",
+    "\n",
+    "            if (nxtX, nxtY) in coordinate_set and (nxtX, nxtY) not in visited:\n",
+    "                queue.append([nxtX, nxtY, curM + 1])\n",
+    "                visited.add((nxtX, nxtY))\n",
+    "\n",
+    "# 17\n",
+    "# rectangle = [[1,1,7,4],[3,2,5,5],[4,3,6,9],[2,6,8,8]]\n",
+    "# characterX = 1\n",
+    "# characterY = 3\n",
+    "# itemX = 7\n",
+    "# itemY = 8\n",
+    "\n",
+    "# 11\n",
+    "# rectangle = [[1,1,8,4],[2,2,4,9],[3,6,9,8],[6,3,7,7]]\n",
+    "# characterX = 9\n",
+    "# characterY = 7\n",
+    "# itemX = 6\n",
+    "# itemY = 1\n",
+    "\n",
+    "# 9\n",
+    "# rectangle = [[1,1,5,7]]\n",
+    "# characterX = 1\n",
+    "# characterY = 1\n",
+    "# itemX = 4\n",
+    "# itemY = 7\n",
+    "\n",
+    "# 15\n",
+    "rectangle = [[2,1,7,5],[6,4,10,10]]\n",
+    "characterX = 3\n",
+    "characterY = 1\n",
+    "itemX = 7\n",
+    "itemY = 10\n",
+    "\n",
+    "# 10\n",
+    "# rectangle = [[2,2,5,5],[1,3,6,4],[3,1,4,6]]\n",
+    "# characterX = 1\n",
+    "# characterY = 4\n",
+    "# itemX = 6\n",
+    "# itemY = 3\n",
+    "\n",
+    "print(solution(rectangle, characterX, characterY, itemX, itemY))"
+   ]
   }
  ],
  "metadata": {
