--- a/program_bfs-dfs.ipynb
+++ b/program_bfs-dfs.ipynb
@@ -419,6 +419,247 @@
     "\n",
     "print(solution(rectangle, characterX, characterY, itemX, itemY))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "여행경로  \n",
+    "  \n",
+    "주어진 항공권을 모두 이용하여 여행경로를 짜려고 합니다. 항상 \"ICN\" 공항에서 출발합니다.  \n",
+    "  \n",
+    "항공권 정보가 담긴 2차원 배열 tickets가 매개변수로 주어질 때, 방문하는 공항 경로를 배열에 담아 return  \n",
+    "  \n",
+    "제한사항  \n",
+    "모든 공항은 알파벳 대문자 3글자로 이루어집니다.  \n",
+    "주어진 공항 수는 3개 이상 10,000개 이하입니다.  \n",
+    "tickets의 각 행 [a, b]는 a 공항에서 b 공항으로 가는 항공권이 있다는 의미입니다.  \n",
+    "주어진 항공권은 모두 사용해야 합니다.  \n",
+    "만일 가능한 경로가 2개 이상일 경우 알파벳 순서가 앞서는 경로를 return 합니다.  \n",
+    "모든 도시를 방문할 수 없는 경우는 주어지지 않습니다.  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict\n",
+    "answer = []\n",
+    "S = \"ICN\"\n",
+    "def dfs(graph, start, goalCount, visited):\n",
+    "    global answer\n",
+    "    if len(visited) == goalCount:\n",
+    "        answer.append([ d for s,d,i in visited ])\n",
+    "\n",
+    "    for dest in graph[start]:\n",
+    "        if (start, dest[0], dest[1]) not in visited:\n",
+    "            visited.append((start,dest[0], dest[1]))\n",
+    "            dfs(graph, dest[0], goalCount, visited)\n",
+    "            visited.pop()\n",
+    "            \n",
+    "\n",
+    "def solution(tickets):\n",
+    "    graph = defaultdict(list)\n",
+    "    for i in range(len(tickets)):\n",
+    "        s, d = tickets[i]\n",
+    "        graph[s].append((d,i))\n",
+    "\n",
+    "    for v in graph[S]:\n",
+    "        visited= (S, v[0], v[1])\n",
+    "        dfs(graph, v[0], len(tickets), [visited])\n",
+    "\n",
+    "    answer.sort()\n",
+    "    return [S] + answer[0]\n",
+    "    \n",
+    "\n",
+    "# 입출력 예\n",
+    "# tickets\treturn\n",
+    "# [[\"ICN\", \"JFK\"], [\"HND\", \"IAD\"], [\"JFK\", \"HND\"]]\t[\"ICN\", \"JFK\", \"HND\", \"IAD\"]\n",
+    "# [[\"ICN\", \"SFO\"], [\"ICN\", \"ATL\"], [\"SFO\", \"ATL\"], [\"ATL\", \"ICN\"], [\"ATL\",\"SFO\"]]\t[\"ICN\", \"ATL\", \"ICN\", \"SFO\", \"ATL\", \"SFO\"]\n",
+    "# tickets = [[\"ICN\", \"JFK\"], [\"HND\", \"IAD\"], [\"JFK\", \"HND\"]]\n",
+    "# tickets = [[\"ICN\", \"SFO\"], [\"ICN\", \"ATL\"], [\"SFO\", \"ATL\"], [\"ATL\", \"ICN\"], [\"ATL\",\"SFO\"]]\n",
+    "# test1 [['ICN','AAA'],['ICN','AAA'],['ICN','AAA'],['AAA','ICN'],['AAA','ICN']]\n",
+    "# test2 [[\"ICN\", \"SFO\"], [\"SFO\", \"ICN\"], [\"ICN\", \"SFO\"],[\"SFO\",\"QRE\"]]\n",
+    "solution([[\"ICN\", \"SFO\"], [\"SFO\", \"ICN\"], [\"ICN\", \"SFO\"],[\"SFO\",\"QRE\"]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "def dfs(graph, start, goalCount, visited):\n",
+    "\n",
+    "    if len(visited) == goalCount+1:\n",
+    "        return visited\n",
+    "    \n",
+    "    for i, dest in enumerate(graph[start]):\n",
+    "        graph[start].pop(i)\n",
+    "        temp = visited[:]\n",
+    "        temp.append(dest)\n",
+    "\n",
+    "        ret = dfs(graph, dest, goalCount, temp)\n",
+    "        graph[start].insert(i, dest)\n",
+    "\n",
+    "        if ret:\n",
+    "            return ret\n",
+    "            \n",
+    "def solution(tickets):\n",
+    "    answer = []\n",
+    "    graph = defaultdict(list)\n",
+    "\n",
+    "    for ticket in tickets:\n",
+    "        graph[ticket[0]].append(ticket[1])\n",
+    "        graph[ticket[0]].sort()\n",
+    "\n",
+    "    answer = dfs(graph, \"ICN\", len(tickets), [\"ICN\"])\n",
+    "\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "퍼즐 조각 채우기\n",
+    "\n",
+    "테이블 위에 놓인 퍼즐 조각을 게임 보드의 빈 공간에 적절히 올려놓으려 합니다.  \n",
+    "게임 보드와 테이블은 모두 각 칸이 1x1 크기인 정사각 격자 모양입니다.  \n",
+    "이때, 다음 규칙에 따라 테이블 위에 놓인 퍼즐 조각을 게임 보드의 빈칸에 채우면 됩니다.  \n",
+    "\n",
+    "조각은 한 번에 하나씩 채워 넣습니다.  \n",
+    "조각을 회전시킬 수 있습니다.  \n",
+    "조각을 뒤집을 수는 없습니다.  \n",
+    "게임 보드에 새로 채워 넣은 퍼즐 조각과 인접한 칸이 비어있으면 안 됩니다.  \n",
+    "\n",
+    "테이블 위에 놓인 퍼즐 조각들 또한 마찬가지로 [상,하,좌,우]로 인접해 붙어있는 경우는 없으며, 흰 칸은 퍼즐이 놓이지 않은 빈 공간을 나타냅니다.  \n",
+    "모든 퍼즐 조각은 격자 칸에 딱 맞게 놓여있으며, 격자 칸을 벗어나거나, 걸쳐 있는 등 잘못 놓인 경우는 없습니다.  \n",
+    "    \n",
+    "현재 게임 보드의 상태 game_board, 테이블 위에 놓인 퍼즐 조각의 상태 table이 매개변수로 주어집니다. 규칙에 맞게 최대한 많은 퍼즐 조각을 채워 넣을 경우, 총 몇 칸을 채울 수 있는지 return  \n",
+    "  \n",
+    "제한사항  \n",
+    "3 ≤ game_board의 행 길이 ≤ 50  \n",
+    "game_board의 각 열 길이 = game_board의 행 길이  \n",
+    "즉, 게임 보드는 정사각 격자 모양입니다.  \n",
+    "game_board의 모든 원소는 0 또는 1입니다.  \n",
+    "0은 빈칸, 1은 이미 채워진 칸을 나타냅니다.  \n",
+    "퍼즐 조각이 놓일 빈칸은 1 x 1 크기 정사각형이 최소 1개에서 최대 6개까지 연결된 형태로만 주어집니다.  \n",
+    "table의 행 길이 = game_board의 행 길이  \n",
+    "table의 각 열 길이 = table의 행 길이  \n",
+    "즉, 테이블은 game_board와 같은 크기의 정사각 격자 모양입니다.  \n",
+    "table의 모든 원소는 0 또는 1입니다.  \n",
+    "0은 빈칸, 1은 조각이 놓인 칸을 나타냅니다.  \n",
+    "퍼즐 조각은 1 x 1 크기 정사각형이 최소 1개에서 최대 6개까지 연결된 형태로만 주어집니다.  \n",
+    "game_board에는 반드시 하나 이상의 빈칸이 있습니다.  \n",
+    "table에는 반드시 하나 이상의 블록이 놓여 있습니다.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "def solution(game_board, table):\n",
+    "    # board : 0 (고정)\n",
+    "    # Set x, 같은 모양 나올수 있음\n",
+    "    fixShape = defaultdict(int)\n",
+    "    move = [[1,0],[-1,0],[0,1],[0,-1]]\n",
+    "    M = len(game_board)\n",
+    "\n",
+    "    for i in range(M):\n",
+    "        for j in range(M):\n",
+    "            if not game_board[i][j]:\n",
+    "                game_board[i][j] = 1\n",
+    "                stack = [[i, j, 0, 0]]\n",
+    "                puzzle = []\n",
+    "                puzzle.append((0,0))\n",
+    "                while stack:\n",
+    "                    curLoc = stack.pop()\n",
+    "\n",
+    "                    for m in move:\n",
+    "                        nxtRow = curLoc[0] + m[0]\n",
+    "                        nxtCol = curLoc[1] + m[1]\n",
+    "                        nxtShapeRow = curLoc[2] + m[0]\n",
+    "                        nxtShapeCol = curLoc[3] + m[1]\n",
+    "\n",
+    "                        if 0 <= nxtRow < M and 0<= nxtCol <M:\n",
+    "                            if not game_board[nxtRow][nxtCol]:\n",
+    "                                game_board[nxtRow][nxtCol] = 1\n",
+    "                                stack.append([nxtRow, nxtCol, nxtShapeRow, nxtShapeCol])\n",
+    "                                puzzle.append((nxtShapeRow,nxtShapeCol))\n",
+    "\n",
+    "                fixShape[tuple(sorted(puzzle))] += 1\n",
+    "    answer = 0\n",
+    "    for _ in range(4):\n",
+    "        table = [[ row[i] for row in table[::-1]] for i in range(M)]\n",
+    "        copy_table = [row[:] for row in table]\n",
+    "\n",
+    "        for i in range(M):\n",
+    "            for j in range(M):\n",
+    "                if copy_table[i][j]:\n",
+    "                    copy_table[i][j] = 0\n",
+    "                    stack = [[i,j,0,0]]\n",
+    "                    puzzle = []\n",
+    "                    puzzle.append((0,0))\n",
+    "                    while stack:\n",
+    "                        curLoc = stack.pop()\n",
+    "\n",
+    "                        for m in move:\n",
+    "                            nxtRow = curLoc[0] + m[0]\n",
+    "                            nxtCol = curLoc[1] + m[1]\n",
+    "                            nxtShapeRow = curLoc[2] + m[0]\n",
+    "                            nxtShapeCol = curLoc[3] + m[1]\n",
+    "\n",
+    "                            if 0 <= nxtRow < M and 0<= nxtCol <M:\n",
+    "                                if copy_table[nxtRow][nxtCol]:\n",
+    "                                    copy_table[nxtRow][nxtCol] = 0\n",
+    "                                    stack.append([nxtRow, nxtCol, nxtShapeRow, nxtShapeCol])\n",
+    "                                    puzzle.append((nxtShapeRow,nxtShapeCol))\n",
+    "                                    \n",
+    "                    puzzle = tuple(sorted(puzzle))\n",
+    "                    if puzzle in fixShape:\n",
+    "                        answer += len(puzzle)\n",
+    "                        fixShape[puzzle] -= 1\n",
+    "                        if not fixShape[puzzle]:\n",
+    "                            del fixShape[puzzle]\n",
+    "                        \n",
+    "                        table = [row[:] for row in copy_table]\n",
+    "\n",
+    "                    else:\n",
+    "                        copy_table = [row[:] for row in table]\n",
+    "\n",
+    "    return answer\n",
+    "\n",
+    "\n",
+    "# 14\n",
+    "game_board = [[1,1,0,0,1,0],[0,0,1,0,1,0],[0,1,1,0,0,1],[1,1,0,1,1,1],[1,0,0,0,1,0],[0,1,1,1,0,0]]\n",
+    "table = [[1,0,0,1,1,0],[1,0,1,0,1,0],[0,1,1,0,1,1],[0,0,1,0,0,0],[1,1,0,1,1,0],[0,1,0,0,0,0]]\n",
+    "\n",
+    "# 0\n",
+    "# game_board = [[0,0,0],[1,1,0],[1,1,1]]\n",
+    "# table = [[1,1,1],[1,0,0],[0,0,0]]\n",
+    "\n",
+    "solution(game_board, table)"
+   ]
   }
  ],
  "metadata": {
