--- a/program_bfs-dfs.ipynb
+++ b/program_bfs-dfs.ipynb
@@ -579,73 +579,66 @@
     "from collections import defaultdict\n",
     "\n",
     "def solution(game_board, table):\n",
-    "    # board : 0 (고정)\n",
-    "    # Set x, 같은 모양 나올수 있음\n",
-    "    fixShape = defaultdict(int)\n",
-    "    move = [[1,0],[-1,0],[0,1],[0,-1]]\n",
+    "    answer = 0\n",
+    "    fixPuzzle = defaultdict(int)\n",
+    "    moves = [[1,0], [-1,0], [0,1], [0,-1]]\n",
     "    M = len(game_board)\n",
     "\n",
     "    for i in range(M):\n",
     "        for j in range(M):\n",
     "            if not game_board[i][j]:\n",
     "                game_board[i][j] = 1\n",
-    "                stack = [[i, j, 0, 0]]\n",
-    "                puzzle = []\n",
-    "                puzzle.append((0,0))\n",
+    "                stack = [[i,j,0,0]]\n",
+    "                puzzle = ((0,0),)\n",
     "                while stack:\n",
-    "                    curLoc = stack.pop()\n",
+    "                    curR, curC, moveR, moveC = stack.pop()\n",
+    "                    for move in moves:\n",
+    "                        nxtR = curR + move[0]\n",
+    "                        nxtC = curC + move[1]\n",
+    "                        nxt_moveR = moveR + move[0]\n",
+    "                        nxt_moveC = moveC + move[1]\n",
     "\n",
-    "                    for m in move:\n",
-    "                        nxtRow = curLoc[0] + m[0]\n",
-    "                        nxtCol = curLoc[1] + m[1]\n",
-    "                        nxtShapeRow = curLoc[2] + m[0]\n",
-    "                        nxtShapeCol = curLoc[3] + m[1]\n",
-    "\n",
-    "                        if 0 <= nxtRow < M and 0<= nxtCol <M:\n",
-    "                            if not game_board[nxtRow][nxtCol]:\n",
-    "                                game_board[nxtRow][nxtCol] = 1\n",
-    "                                stack.append([nxtRow, nxtCol, nxtShapeRow, nxtShapeCol])\n",
-    "                                puzzle.append((nxtShapeRow,nxtShapeCol))\n",
-    "\n",
-    "                fixShape[tuple(sorted(puzzle))] += 1\n",
-    "    answer = 0\n",
+    "                        if 0 <= nxtR < M and 0<= nxtC < M:\n",
+    "                            if not game_board[nxtR][nxtC]:\n",
+    "                                game_board[nxtR][nxtC] = 1\n",
+    "                                puzzle += ((nxt_moveR, nxt_moveC),)\n",
+    "                                stack.append([nxtR, nxtC, nxt_moveR, nxt_moveC])\n",
+    "                fixPuzzle[puzzle] += 1\n",
+    "    \n",
     "    for _ in range(4):\n",
     "        table = [[ row[i] for row in table[::-1]] for i in range(M)]\n",
-    "        copy_table = [row[:] for row in table]\n",
+    "        copyTable = [row[:] for row in table]\n",
     "\n",
     "        for i in range(M):\n",
     "            for j in range(M):\n",
-    "                if copy_table[i][j]:\n",
-    "                    copy_table[i][j] = 0\n",
+    "                if copyTable[i][j]:\n",
+    "                    copyTable[i][j] = 0\n",
     "                    stack = [[i,j,0,0]]\n",
-    "                    puzzle = []\n",
-    "                    puzzle.append((0,0))\n",
+    "                    puzzle = ((0,0),)\n",
     "                    while stack:\n",
-    "                        curLoc = stack.pop()\n",
+    "                        curR, curC, moveR, moveC = stack.pop()\n",
+    "                        for move in moves:\n",
+    "                            nxtR = curR + move[0]\n",
+    "                            nxtC = curC + move[1]\n",
+    "                            nxt_moveR = moveR + move[0]\n",
+    "                            nxt_moveC = moveC + move[1]\n",
     "\n",
-    "                        for m in move:\n",
-    "                            nxtRow = curLoc[0] + m[0]\n",
-    "                            nxtCol = curLoc[1] + m[1]\n",
-    "                            nxtShapeRow = curLoc[2] + m[0]\n",
-    "                            nxtShapeCol = curLoc[3] + m[1]\n",
+    "                            if 0 <= nxtR < M and 0<= nxtC < M:\n",
+    "                                if copyTable[nxtR][nxtC]:\n",
+    "                                    copyTable[nxtR][nxtC] = 0\n",
+    "                                    puzzle += ((nxt_moveR, nxt_moveC),)\n",
+    "                                    stack.append([nxtR, nxtC, nxt_moveR, nxt_moveC])\n",
     "\n",
-    "                            if 0 <= nxtRow < M and 0<= nxtCol <M:\n",
-    "                                if copy_table[nxtRow][nxtCol]:\n",
-    "                                    copy_table[nxtRow][nxtCol] = 0\n",
-    "                                    stack.append([nxtRow, nxtCol, nxtShapeRow, nxtShapeCol])\n",
-    "                                    puzzle.append((nxtShapeRow,nxtShapeCol))\n",
-    "                                    \n",
-    "                    puzzle = tuple(sorted(puzzle))\n",
-    "                    if puzzle in fixShape:\n",
+    "                    \n",
+    "                    if puzzle in fixPuzzle:\n",
+    "                        fixPuzzle[puzzle] -= 1\n",
     "                        answer += len(puzzle)\n",
-    "                        fixShape[puzzle] -= 1\n",
-    "                        if not fixShape[puzzle]:\n",
-    "                            del fixShape[puzzle]\n",
-    "                        \n",
-    "                        table = [row[:] for row in copy_table]\n",
+    "                        if not fixPuzzle[puzzle]:\n",
+    "                            del fixPuzzle[puzzle]\n",
+    "                        table = [row[:] for row in copyTable]\n",
     "\n",
     "                    else:\n",
-    "                        copy_table = [row[:] for row in table]\n",
+    "                        copyTable = [row[:] for row in table]\n",
     "\n",
     "    return answer\n",
     "\n",
