--- a/program_binary_search.ipynb
+++ b/program_binary_search.ipynb
@@ -92,13 +92,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 입출력 예\n",
-    "# distance\trocks\tn\treturn\n",
-    "# 25\t[2, 14, 11, 21, 17]\t2\t4\n"
+    "def solution(distance, rocks, n):\n",
+    "    left, right = 0, distance\n",
+    "    rocks = rocks + [distance]\n",
+    "    rocks.sort()\n",
+    "    answer = 0\n",
+    "    while left <= right:\n",
+    "        mid = (left+right)//2\n",
+    "        start = 0\n",
+    "        remove_count = 0\n",
+    "        temp = float('inf')\n",
+    "        for rock in rocks:\n",
+    "            dist = rock-start\n",
+    "            if dist < mid:\n",
+    "                remove_count += 1\n",
+    "\n",
+    "            else:\n",
+    "                start = rock\n",
+    "                temp = min(temp, dist)\n",
+    "\n",
+    "        if remove_count > n:\n",
+    "            right = mid - 1\n",
+    "\n",
+    "        else:\n",
+    "            answer = temp\n",
+    "            left = mid + 1\n",
+    "\n",
+    "    return answer\n",
+    "\n",
+    "distance = 25\n",
+    "rocks = [2, 14, 11, 21, 17]\n",
+    "n = 2\n",
+    "solution(distance, rocks, n)"
    ]
   }
  ],
