--- a/baejun_mathematics.ipynb
+++ b/baejun_mathematics.ipynb
@@ -69,6 +69,62 @@
     "\n",
     "# 계차수열 [a_n+1 - a_n = b_n (a_n의 계차수열)]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 분수찾기\n",
+    "\n",
+    "1/1 , 1/2, 1/3 ...\n",
+    "\n",
+    "2/1 , 2/2, 2/3 ...\n",
+    "\n",
+    "3/1 , 3/2, 3/3 ...  \n",
+    "...  \n",
+    "...  \n",
+    "\n",
+    "이와 같이 나열된 분수들을 1/1 → 1/2 → 2/1 → 3/1 → 2/2 → … 과 같은 지그재그 순서로 차례대로 1번, 2번, 3번, 4번, 5번, … 분수라고 하자.\n",
+    "\n",
+    "X가 주어졌을 때, X번째 분수를 구하는 프로그램을 작성하시오.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 3\n",
+    "\n",
+    "start = 1\n",
+    "col = 1\n",
+    "while True:\n",
+    "    \n",
+    "    if col%2 == 0:\n",
+    "        if start <= n <= start + ((col-1)*1):\n",
+    "            diff = n%start\n",
+    "            cur_row = 1 + diff\n",
+    "            cur_col = col - diff\n",
+    "            print(str(cur_row) + '/' + str(cur_col))\n",
+    "            break\n",
+    "        start += 4 * (col//2)\n",
+    "        \n",
+    "    else:\n",
+    "        if  start - ((col-1) * 1)<= n <= start:\n",
+    "            diff = start%n\n",
+    "            cur_row = 1 + diff\n",
+    "            cur_col = col - diff\n",
+    "            print(str(cur_row) + '/' + str(cur_col))\n",
+    "            break\n",
+    "        start += 1\n",
+    "    col += 1\n",
+    "    \n",
+    "\n",
+    "print(start)\n",
+    "print(col)"
+   ]
   }
  ],
  "metadata": {
