--- a/baejun_mathematics.ipynb
+++ b/baejun_mathematics.ipynb
@@ -74,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 분수찾기\n",
+    "#### 1193 분수찾기\n",
     "\n",
     "1/1 , 1/2, 1/3 ...\n",
     "\n",
@@ -124,6 +124,53 @@
     "\n",
     "print(start)\n",
     "print(col)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2869 달팽이는 올라가고 싶다.\n",
+    "\n",
+    "달팽이는 높이가 V미터인 나무 막대를 올라갈 것이다.  \n",
+    "  \n",
+    "달팽이는 낮에 A미터 올라갈 수 있다. 하지만, 밤에 잠을 자는 동안 B미터 미끄러진다. 또, 정상에 올라간 후에는 미끄러지지 않는다.  \n",
+    "  \n",
+    "달팽이가 나무 막대를 모두 올라가려면, 며칠이 걸리는지 구하는 프로그램을 작성하시오.  \n",
+    "\n",
+    "입력 : 첫째 줄에 세 정수 A, B, V가 공백으로 구분되어서 주어진다. (1 ≤ B < A ≤ V ≤ 1,000,000,000)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# a = 100\n",
+    "# b = 99\n",
+    "# v = 1000000000\n",
+    "# res = 999999901\n",
+    "\n",
+    "# a = 2\n",
+    "# b = 1\n",
+    "# v = 5\n",
+    "# res = 4\n",
+    "\n",
+    "a,b,v,res = 5,1,6,2\n",
+    "\n",
+    "day = a-b\n",
+    "\n",
+    "print((v-b-1)//day + 1)\n",
+    "\n"
    ]
   }
  ],
