--- a/baejun_mathematics.ipynb
+++ b/baejun_mathematics.ipynb
@@ -169,8 +169,47 @@
     "\n",
     "day = a-b\n",
     "\n",
-    "print((v-b-1)//day + 1)\n",
-    "\n"
+    "print((v-b-1)//day + 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 10250 ACM 호텔\n",
+    "\n",
+    "손님들은 호텔 정문으로부터 걸어서 가장 짧은 거리에 있는 방을 선호한다고 한다.  \n",
+    "설문조사 결과 대로 호텔 정문으로부터 걷는 거리가 가장 짧도록 방을 배정하는 프로그램을 작성하고자 한다.  \n",
+    "문제를 단순화하기 위해서 호텔은 직사각형 모양이라고 가정하자.  \n",
+    "각 층에 W 개의 방이 있는 H 층 건물이라고 가정하자 (1 ≤ H, W ≤ 99).  \n",
+    "그리고 엘리베이터는 가장 왼쪽에 있다고 가정하자.  \n",
+    "이런 형태의 호텔을 H × W 형태 호텔이라고 부른다.  \n",
+    "호텔 정문은 일층 엘리베이터 바로 앞에 있는데, 정문에서 엘리베이터까지의 거리는 무시한다.  \n",
+    "또 모든 인접한 두 방 사이의 거리는 같은 거리(거리 1)라고 가정하고 호텔의 정면 쪽에만 방이 있다고 가정한다.  \n",
+    "방 번호는 YXX 나 YYXX 형태인데 여기서 Y 나 YY 는 층 수를 나타내고 XX 는 엘리베이터에서부터 세었을 때의 번호를 나타낸다.  \n",
+    "손님은 엘리베이터를 타고 이동하는 거리는 신경 쓰지 않는다. 다만 걷는 거리가 같을 때에는 아래층의 방을 더 선호한다.  \n",
+    "예를 들면 102 호 방보다는 301 호 방을 더 선호하는데, 102 호는 거리 2 만큼 걸어야 하지만 301 호는 거리 1 만큼만 걸으면 되기 때문이다.  \n",
+    "이 정책에 따라 N 번째로 도착한 손님에게 배정될 방 번호를 계산하는 프로그램이다.  \n",
+    "첫 번째 손님은 101 호, 두 번째 손님은 201 호 등과 같이 배정한다.  \n",
+    "  \n",
+    "각 테스트 데이터는 한 행으로서 H, W, N, 세 정수를 포함하고 있으며 각각 호텔의 층 수, 각 층의 방 수, 몇 번째 손님인지를 나타낸다  \n",
+    "(1 ≤ H, W ≤ 99, 1 ≤ N ≤ H × W). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "T = 2\n",
+    "\n",
+    "test = [[6, 12, 10], [30, 50, 72]]\n",
+    "\n",
+    "\n",
+    "for H,W,N in test:\n",
+    "    room, floor = divmod(N-1, H)\n",
+    "    print((floor+1)*100+(room+1))"
    ]
   }
  ],
